--- a/app/src/main/res/layout/activity_show_friends.xml
+++ b/app/src/main/res/layout/activity_show_friends.xml
@@ -15,13 +15,12 @@
 
     <ImageButton
         android:id="@+id/fab"
-        android:background="#fff"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="bottom|end"
-        android:src="@android:drawable/ic_menu_edit"
+        android:src="@drawable/pencil"
         android:layout_alignBottom="@+id/lv_show_friends"
         android:layout_alignRight="@+id/lv_show_friends"
         android:layout_alignEnd="@+id/lv_show_friends"
-        android:backgroundTint="@color/colorPrimaryDark"/>
+        android:backgroundTint="@color/colorPrimary"/>
 </RelativeLayout>
