--- a/app/src/main/res/layout/start_order_activity.xml
+++ b/app/src/main/res/layout/start_order_activity.xml
@@ -31,7 +31,8 @@
             android:gravity="center_vertical"
             android:text="Choose Restaurant"
             android:textColor="#000"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:singleLine="true"/>
     </LinearLayout>
 
     <ImageView
