--- a/app/src/main/res/layout/activity_menu_select.xml
+++ b/app/src/main/res/layout/activity_menu_select.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.priyanshu.crumbs.MenuSelect"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
-
-<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="9"
     android:orientation="vertical">
 
     <LinearLayout
@@ -30,6 +32,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/image1"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -41,12 +44,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Sandwich"
+                    android:singleLine="true"
+                    android:id="@+id/TextDishName1"
                     android:textSize="20sp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:id="@+id/price1"
                     android:text="SGD 10"
                     android:textSize="20sp" />
 
@@ -88,6 +94,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/image2"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -99,6 +106,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Sandwich"
+                    android:singleLine="true"
+                    android:id="@+id/TextDishName2"
                     android:textSize="20sp" />
 
                 <TextView
@@ -106,6 +115,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="SGD 10"
+                    android:id="@+id/price2"
                     android:textSize="20sp" />
 
                 <LinearLayout
@@ -154,6 +164,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/image3"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -166,6 +177,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Sandwich"
+                    android:id="@+id/TextDishName3"
+                    android:singleLine="true"
                     android:textSize="20sp" />
 
                 <TextView
@@ -173,6 +186,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="SGD 10"
+                    android:id="@+id/price3"
                     android:textSize="20sp" />
 
                 <LinearLayout
@@ -215,6 +229,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/image4"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -227,6 +242,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Sandwich"
+                    android:id="@+id/TextDishName4"
+                    android:singleLine="true"
                     android:textSize="20sp" />
 
                 <TextView
@@ -234,6 +251,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="SGD 10"
+                    android:id="@+id/price4"
                     android:textSize="20sp" />
 
                 <LinearLayout
@@ -286,14 +304,17 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:src="@drawable/c"
-                    android:scaleType="centerCrop"/>
+                    android:scaleType="centerCrop"
+                    android:id="@+id/image5" />
 
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:id="@+id/TextDishName5"
                     android:text="Sandwich"
+                    android:singleLine="true"
                     android:textSize="20sp" />
 
                 <TextView
@@ -301,6 +322,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="SGD 10"
+                    android:id="@+id/price5"
                     android:textSize="20sp" />
 
                 <LinearLayout
@@ -347,7 +369,8 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:src="@drawable/d"
-                    android:scaleType="centerCrop"/>
+                    android:scaleType="centerCrop"
+                    android:id="@+id/image6" />
 
 
                 <TextView
@@ -355,6 +378,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="Sandwich"
+                    android:singleLine="true"
+                    android:id="@+id/TextDishName6"
                     android:textSize="20sp" />
 
                 <TextView
@@ -362,6 +387,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="SGD 10"
+                    android:id="@+id/price6"
                     android:textSize="20sp" />
 
                 <LinearLayout
@@ -399,7 +425,7 @@
         </LinearLayout>
 
     </LinearLayout>
-
+</ScrollView>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -409,4 +435,3 @@
         android:onClick="payPal"/>
 
 </LinearLayout>
-</ScrollView>
