--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,6 +42,7 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -69,17 +72,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="true"
+                android:onClick="payment"
                 android:text="Payments"
                 android:textColor="#000000"
-                android:textSize="20sp"
-                android:onClick="payment"/>
+                android:textSize="20sp" />
 
 
         </LinearLayout>
 
 
-
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -157,6 +160,7 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -195,6 +199,7 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -230,9 +235,8 @@
 
 
         </LinearLayout>
-
-
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -240,15 +244,16 @@
         android:background="#FFFFFF"
         android:clickable="true"
         android:contextClickable="true"
+        android:onClick="logout"
         android:orientation="horizontal"
-        android:padding="8dp"
-        android:onClick="logout">
+        android:padding="8dp">
 
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
+            android:onClick="logout"
             android:paddingRight="4dp"
             android:src="@drawable/logout" />
 
@@ -257,16 +262,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="8"
             android:clickable="true"
+            android:onClick="logout"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="true"
+                android:onClick="logout"
                 android:text="Sign Out"
                 android:textColor="#000000"
-                android:textSize="20sp"
-                />
+                android:textSize="20sp" />
         </LinearLayout>
 
 
