--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:paddingRight="4dp"
-            android:src="@drawable/star" />
+            android:src="@drawable/business" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -31,6 +31,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:text="Order Summary "
                 android:textColor="#000000"
                 android:textSize="20sp" />
